--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:gravity="center">
 
     <cn.cxy.slidemenu.SlideLayout
+        android:id="@+id/slideLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none">
